<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/settings_orange">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/activity_settings"
        android:textSize="30sp"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notifications_material_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications_subtitle"
        android:textSize="20sp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/low_stock_material_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/low_stock_warning_material_switch"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_material_switch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/out_of_stock_material_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/out_of_stock_warning_material_switch"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/low_stock_material_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>