<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/login_blue">

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login_button_content"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"/>

    <TextView
        android:id="@+id/login_password_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/login_password_text_content"
        android:textSize="30sp"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/login_password_edit_text"/>

    <EditText
        android:id="@+id/login_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_password_text"/>

    <TextView
        android:id="@+id/login_username_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/login_username_text_content"
        android:textSize="30sp"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/login_username_edit_text"/>

    <ImageView
        android:id="@+id/sample_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/login_username_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/sample_logo"
        android:src="@drawable/workhorse_warehouse_sample_logo"
        app:tint="@color/black"
        app:tintMode="src_in"/>

</androidx.constraintlayout.widget.ConstraintLayout>