<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccessActivity"
    android:background="@color/access_gray"
    >

    <TextView
        android:id="@+id/access_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_access"
        android:textSize="30sp"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/access_tittle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="2">

        <Button
            android:id="@+id/picking_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:text="@string/activity_picking"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/stowing_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:text="@string/activity_stowing"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/stock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:text="@string/activity_stock"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/permissions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:text="@string/activity_permissions"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/></GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>